[package]
name = "bzb_execution_layer"
version = "0.0.1"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/bzbyte/execution_layer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensitive_url = { version="0.1.0", path = "./common/sensitive_url" }
types = { version="0.2.1", path = "./consensus/types"}
lighthouse_metrics = { version="0.2.0", path = "./common/lighthouse_metrics" }
eth2_ssz = { version="0.4.1", path = "consensus/ssz" }
eth2_ssz_types = { version="0.2.2", path = "consensus/ssz_types" } 
tree_hash = { version="0.4.1", path = "consensus/tree_hash" }
task_executor = { version="0.1.0", path = "./common/task_executor" }
tree_hash_derive = { version="0.4.0", path = "./consensus/tree_hash_derive" }
eth2_serde_utils = { version="0.1.1", path = "./consensus/serde_utils" } 

slog = "2.5.2"
futures = "0.3.7"
sloggers = { version = "2.1.1", features = ["json"] }
reqwest = { version = "0.11.0", features = ["json","stream"] }
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive"] }
warp = { version = "0.3.2", features = ["tls"] }
jsonwebtoken = "8"
bytes = "1.1.0"
hex = "0.4.2"
superstruct = "0.6.0"
lru = "0.7.1"
exit-future = "0.2.0"
parking_lot = "0.12.0"
tempfile = "3.1.0"
rand = "0.8.5"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
lazy_static = "1.4.0"
ethers-core = "1.0.2"
strum = "0.24.0"
keccak-hash = "0.10.0"
hash256-std-hasher = "0.15.2"
triehash = "0.8.4"
hash-db = "0.15.2"
tokio-stream = { version = "0.1.9", features = [ "sync" ] }
tokio = { version = "1.10.0", features = ["full"] }

[dev-dependencies]
