[package]
name = "execution_layer"
description = "Rust communication shim to talk to a execution client"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bzbyte/execution_layer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json","stream"] }
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive"] }
jsonwebtoken = "8"
bytes = "1.1.0"
hex = "0.4.2"
superstruct = "0.6.0"
parking_lot = "0.12.0"
rand = "0.8.5"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
lazy_static = "1.4.0"
ethers-core = "1.0.2"
strum = "0.24.0"
tokio = { version = "1.10.0", features = ["full"] }
ssz_types = "0.5.2"
ethereum-types = "0.14.1"
serde_derive = "1.0.158"
arbitrary = { version = "1.3.0", features = ["derive"] }
derivative = "2.2.0"
typenum = "1.16.0"
url = "2.3.1"

[dev-dependencies]
