[package]
name = "execution_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensitive_url = { path = "./common/sensitive_url" }
types = { path = "./consensus/types"}
task_executor = { path = "./common/task_executor" }
lighthouse_metrics = { path = "./common/lighthouse_metrics" }
tree_hash_derive = { path = "./consensus/tree_hash_derive"}

tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1.51"
slog = "2.5.2"
futures = "0.3.7"
sloggers = { version = "2.1.1", features = ["json"] }

reqwest = { version = "0.11.0", features = ["json","stream"] }
eth2_serde_utils = "0.1.1"
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive"] }
warp = { version = "0.3.2", features = ["tls"] }
jsonwebtoken = "8"

bytes = "1.1.0"

hex = "0.4.2"
eth2_ssz = "0.4.1"
eth2_ssz_types = "0.2.2"
superstruct = "0.6.0"
lru = "0.7.1"
exit-future = "0.2.0"
tree_hash = "0.4.1"

parking_lot = "0.12.0"

tempfile = "3.1.0"
rand = "0.8.5"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }

lazy_static = "1.4.0"
ethers-core = "1.0.2"


mev-rs = { git = "https://github.com/ralexstokes/mev-rs" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs" }
tokio-stream = { version = "0.1.9", features = [ "sync" ] }
strum = "0.24.0"
keccak-hash = "0.10.0"
hash256-std-hasher = "0.15.2"
triehash = "0.8.4"
hash-db = "0.15.2"



# fork_choice = { path = "../../consensus/fork_choice" }
# slot_clock = { path = "../../common/slot_clock" }
# eth2 = { path = "../../common/eth2" }
# state_processing = { path = "../../consensus/state_processing" }
# environment = { path = "../../lighthouse/environment" }
# sensitive_url = { path = "../../common/sensitive_url" }
# builder_client = { path = "./builder_client" }
